--- a/calendar.yaml
+++ b/calendar.yaml
@@ -537,8 +537,8 @@
 - name: Letter from the Producer Live Part LXXXI
   short: PLL LXXXI
   type: live letter
-  at: 2024-05-16
-  allDay: true
+  at: 2024-05-16 11:00:00
+  url: https://sqex.to/oX18H
 - name: Dragon Quest X Collaboration
   type: event
   color: "#e03f77"
